@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine_encoder.c,v 1.16 2004/07/20 16:37:45 mroi Exp $
+ * $Id: xine_encoder.c,v 1.17 2004/07/31 18:57:45 valtri Exp $
  */
  
 /* mpeg encoders for the dxr3 video out plugin. */
@@ -34,7 +34,7 @@
 /* #define LOG */
 
 #include "video_out_dxr3.h"
-#include "libavcodec/avcodec.h"
+#include <avcodec.h>
 
 /* buffer size for encoded mpeg1 stream; will hold one intra frame 
  * at 640x480 typical sizes are <50 kB. 512 kB should be plenty */
