@@ -18,6 +18,7 @@ xine-lib (1-rc6)
   * experimental time stretching plugin: play stream faster or 
     slower than original speed, optionally preserving pitch
   * another win32 dll crash fix (after playing several files)
+  * configure option for building xine with external ffmpeg library
                 
 xine-lib (1-rc5)  
   * add support for ejecting removable media on Solaris
